2012/02/29:
	* Overhaul to use LibEnfiltrate
	* Rework a bunch of stuff.
	* Documentation fix.
	* Always use stored variables for character inventory queries
	  (for consistency)
	* Notice Event.Item.Update, which fires when count changes even
	  if a slot's contents are unchanged.  Which happens when trying
	  to re-stack things.
	* Make apply_args indicate success or failure

2012/01/22:
	* Add function:<code> to filters

2012/01/07:
	* Start building the filter editor tools, better support for
	  making and modifying filters.
	* Filter editor callback rules and behavior enhanced, name
	  editing works, bank/inventory/equip/ward checkboxes work.
	* Call this 0.6 because a lot has changed.

2011/12/12:
	* Switch to LibAccounts instead of charspec thing.  Stop showing
	  things across shards.

2011/11/30:
	* Remove bags from move_items()
	* First pass of move_items()

2011/11/20:
	* Import argument processing magic from LootSorter/Baggotry
	* Add merge_items() for displaying merged lists
	* Make sure default is bank+inventory, rather than maybe empty

2011/11/18:
	* Lots of cleanup to alt inventory code.
	* Make rarity_color more usable.
	* Allow multiple slotspecs
	* Set default to (bank, inventory)

2011/11/16:
	* Added initial support for access to inventory on alts
	* Improved stacking logic, removed "inferred..." message because
	  it was spammy.

2011/11/14:
	* Made rarity_p return canonicalized names and colors
	* Removed excess testing for false values from rarity now that
	  relop() handles that
	* Added "permissive" flag to rarity to control canonicalization.

2011/11/13:
	* Merged merge/split into stack()
	* Added 'descr' to filters for dumping
	* Added rarity_p()
	* Renamed old iterate() to select(), and added a new iterate()
	  which is more like an inject.
	* Added translation of colors, and also 'nil', to rarity_p()
	* Added relops to matchers.
	* Emit "No matches" when dumping an empty baggish.